# SOEM

./: .clang-format  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitmodules  .jenkins  .travis.yml  CMakeLists.txt  CMakePresets.json  ChangeLog  Doxyfile  LICENSE  LICENSE.md  Makefile  README  README.md  README_proxima.md  appveyor.yml  build_rpi_3.sh  cat_test.sh  clean_libsoem_lib.bat  clean_test_win32.bat  drvcomment.txt  make_libsoem_lib.bat  make_status_test_win32.bat  make_test_win32.bat  make_test_win32_all.bat  setup.sh
.docker/: linux-arm64.Dockerfile  windows-x64.Dockerfile
.github/workflows/: build.yml  upload.yml
cmake/: AddENI.cmake  Darwin.cmake  Linux.cmake  Windows.cmake  rt-kernel.cmake  rtems.cmake
cmake/Modules/: FindRTNet.cmake
cmake/Modules/Platform/: rt-kernel-C.cmake  rt-kernel-gcc-bfin.cmake  rt-kernel-gcc-kinetis.cmake  rt-kernel-gcc.cmake  rt-kernel.cmake
cmake/Platform/: rt-kernel.cmake  rtems.cmake
cmake/Toolchains/: rt-kernel-bfin.cmake  rt-kernel-kinetis.cmake
cmake/toolchain/: arm7tdmi.cmake  arm926ej-s.cmake  bfin.cmake  cortex-a8-neon.cmake  cortex-a8.cmake  cortex-a9-vfp.cmake  cortex-a9.cmake  cortex-m3.cmake  cortex-m33.cmake  cortex-m33f.cmake  cortex-m4.cmake  cortex-m4f.cmake  cortex-m7f.cmake  cortex-m7fd.cmake  cortex-r5-vfp.cmake  e200.cmake  ppc604.cmake  rt-kernel-bfin.cmake  rt-kernel-imx6.cmake  rt-kernel.cmake
cmake/tools/: FindSphinx.cmake
contrib/cmake/: rtems.cmake
doc/: eni.txt  sample-eni.c  sample-eni.xml  soem.dox  tutorial.txt
doc/html/: annotated.html  classes.html  ebox_8c.html  eepromtool_8c.html  ethercatbase_8c.html  ethercatbase_8h.html  ethercatcoe_8c.html  ethercatcoe_8h.html  ethercatconfig_8c.html  ethercatconfig_8h.html  ethercatconfiglist_8h.html  ethercatdc_8c.html  ethercatdc_8h.html  ethercatfoe_8c.html  ethercatfoe_8h.html  ethercatmain_8c.html  ethercatmain_8h.html  ethercatprint_8c.html  ethercatprint_8h.html  ethercatsoe_8c.html  ethercatsoe_8h.html  ethercattype_8h.html  files.html  functions.html  functions_0x62.html  functions_0x63.html  functions_0x64.html  functions_0x65.html  functions_0x66.html  functions_0x67.html  functions_0x68.html  functions_0x69.html  functions_0x6c.html  functions_0x6d.html  functions_0x6e.html  functions_0x6f.html  functions_0x70.html  functions_0x72.html  functions_0x73.html  functions_0x74.html  (+105 more)
example/: CMakeLists.txt
example/cmake/: ThirdPartyHandling.cmake
example/slaveinfo/: CMakeLists.txt  slaveinfo.c
include/soem/: ec_base.h  ec_coe.h  ec_config.h  ec_dc.h  ec_eoe.h  ec_foe.h  ec_main.h  ec_options.h.in  ec_print.h  ec_soe.h  ec_type.h  ethercatcoe.h  ethercatconfig.h  ethercatdc.h  ethercateoe.h  ethercatfoe.h  ethercatmain.h  ethercatprint.h  ethercatsoe.h  soem.h
make/: app.mk  cl_eepromtool.rsp  cl_libsoem.rsp  cl_simple_test.rsp  cl_slaveinfo.rsp  cl_status_test.rsp  files.mk  lib.mk  lib_libsoem.rsp  link_eepromtool.rsp  link_simple_test.rsp  link_slaveinfo.rsp  link_status_test.rsp  rules.mk  subdir.mk
make/compilers/: arm-eabi-gcc.mk  bfin-elf-gcc.mk  gcc.mk  linux-gcc.mk  powerpc-eabi-gcc.mk  powerpc-eabispe-gcc.mk
osal/: Makefile  osal.h
osal/circle/: cethercatmaster.cpp  cethercatmaster.h  osal.cpp  osal_defs.h
osal/erika/: osal.c  osal_defs.h
osal/intime/: osal.c  osal_defs.h
osal/linux/: Makefile  osal.c  osal_defs.h
osal/macosx/: osal.c  osal_defs.h
osal/rtems/: osal.c  osal_defs.h
osal/rtk/: Makefile  osal.c  osal_defs.h  soem_cmds.c  soem_cmds.h
osal/vxworks/: osal.c  osal_defs.h
osal/win32/: Makefile  osal.c  osal_defs.h  osal_win32.h
osal/xenomai/: osal.c
oshw/circle/: nicdrv.cpp  nicdrv.h  oshw.c  oshw.h
oshw/darwin/: nicdrv.c  nicdrv.h
oshw/erika/: nicdrv.c  nicdrv.h  oshw.c  oshw.h
oshw/intime/: nicdrv.c  nicdrv.h  oshw.c  oshw.h
oshw/linux/: Makefile  nicdrv.c  nicdrv.h  oshw.c  oshw.h
oshw/macosx/: nicdrv.c  nicdrv.h  oshw.c
oshw/rtems/: nicdrv.c  nicdrv.h  oshw.c  oshw.h
oshw/rtk/: nicdrv.c  nicdrv.h  oshw.c  oshw.h
oshw/vxworks/: nicdrv.c  nicdrv.h  oshw.c  oshw.h
oshw/win32/: Makefile  nicdrv.c  nicdrv.h  oshw.c  oshw.h
oshw/xenomai/: nicdrv.c  nicdrv.h  oshw.h
samples/coetest/: CMakeLists.txt  coetest.c
samples/ec_sample/: CMakeLists.txt  ec_sample.c
samples/eepromtool/: CMakeLists.txt  eepromtool.c
samples/eni_test/: CMakeLists.txt  eni_test.c
samples/eoe_test/: CMakeLists.txt  eoe_test.c
samples/firm_update/: CMakeLists.txt  firm_update.c
samples/moog_valve_app/: CMakeLists.txt  moog_valve_app.c
samples/red_test/: CMakeLists.txt  red_test.c
samples/simple_ng/: CMakeLists.txt  simple_ng.c
samples/simple_test/: CMakeLists.txt  simple_test.c
samples/slaveinfo/: CMakeLists.txt  slaveinfo.c
scripts/: eniconv.py
soem/: Makefile  ecat.c  ecat.h  ethercat.h  ethercatbase.c  ethercatbase.h  ethercatcoe.c  ethercatcoe.h  ethercatconfig.c  ethercatconfig.h  ethercatconfiglist.h  ethercatdc.c  ethercatdc.h  ethercateoe.c  ethercateoe.h  ethercatfoe.c  ethercatfoe.h  ethercatmain.c  ethercatmain.h  ethercatprint.c  ethercatprint.h  ethercatsi.c  ethercatsi.h  ethercatsoe.c  ethercatsoe.h  ethercattype.h
src/: ec_base.c  ec_coe.c  ec_config.c  ec_dc.c  ec_eoe.c  ec_foe.c  ec_main.c  ec_print.c  ec_soe.c  ethercatbase.c  ethercatconfig.c  ethercatdc.c  ethercateoe.c  ethercatfoe.c  ethercatsoe.c
test/: Makefile
test/circle/: README.txt
test/linux/: Makefile  aliastool.c
test/linux/ebox/: ebox.c  (+1 more)
test/linux/eepromtool/: CMakeLists.txt  Makefile  eepromtool.c
test/linux/firm_update/: CMakeLists.txt  Makefile  firm_update.c
test/linux/proxima_robot/: CMakeLists.txt  get.h  proxima_robot.cpp  set.h
test/linux/simple_test/: CMakeLists.txt  Makefile  simple_test.c
test/linux/slaveinfo/: CMakeLists.txt  Makefile  slaveinfo.c
test/rtk/: main.c  schedule.tt
test/simple_ng/: CMakeLists.txt  simple_ng.c
test/win32/: Makefile
util/eepromtool/: CMakeLists.txt  eepromtool.c  eepromtool.h  main.c
util/simple_test/: CMakeLists.txt  main.c  simple_test.c  simple_test.h
util/slaveinfo/: CMakeLists.txt  main.c  slaveinfo.c  slaveinfo.h
(+77 files in other folders)
